# qwen3-tts-cpp-streaming

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  test_linecoach_base.bat  test_voicedesign.bat
.tmp_full_offgrid_codebase/ExternalServices/OffgridAI_TTS/: Build.ps1  CMakeLists.txt
.tmp_full_offgrid_codebase/ExternalServices/OffgridAI_TTS/src/: main.cpp
.tmp_full_offgrid_codebase/ExternalServices/OffgridAI_TTS/src/App/: TTSServiceApp.h
.tmp_full_offgrid_codebase/ExternalServices/OffgridAI_TTS/src/Backend/: ITTSBackend.h  Qwen3TTSBackend.cpp  Qwen3TTSBackend.h
.tmp_full_offgrid_codebase/ExternalServices/OffgridAI_TTS/src/Protocol/: TTSProtocol.cpp  TTSProtocol.h
.tmp_full_offgrid_codebase/ExternalServices/OffgridAI_TTS/src/Transport/: TTSPipeServer.cpp  TTSPipeServer.h
.tmp_full_offgrid_codebase/Source/: OffgridAI.Build.cs
.tmp_full_offgrid_codebase/Source/Private/: OffgridAI.cpp  OffgridAIBoomOperator.cpp  OffgridAIConversationManager.cpp  OffgridAILineCoach.cpp  OffgridAILipsyncParityHarnessSubsystem.cpp  OffgridAIMetaHumanFaceDriverComponent.cpp
.tmp_full_offgrid_codebase/Source/Public/: OffgridAI.h  OffgridAIBoomOperator.h  OffgridAIConversationManager.h  OffgridAILineCoach.h  OffgridAILipsyncParityHarnessSubsystem.h  OffgridAIMetaHumanFaceDriverComponent.h
.tmp_offgrid_qwen/: CMakeLists.txt
.tmp_offgrid_qwen/docs/: architecture.md
.tmp_offgrid_qwen/engine/: CMakeLists.txt  README.md  build.ps1  reference_text.txt
.tmp_offgrid_side_code/Source/Private/: OffgridAILineCoach.cpp
apps/streaming_cli/: CMakeLists.txt
apps/streaming_cli/include/offgrid_tts/: Qwen3StreamingTts.h
apps/streaming_cli/src/cli/: main.cpp
apps/streaming_cli/src/streaming/: Qwen3StreamingTts.cpp
docs/: architecture.md  baseline_results.md  bridge_adapter.md  voice_quality_experiments.md
engine/: CMakeLists.txt  README.md
engine/.github/workflows/: windows-tests.yml
engine/.sisyphus/drafts/: qwen3-tts-ggml-implementation.md
engine/.sisyphus/plans/: qwen3-tts-ggml.md
engine/ggml/src/: ggml.c
engine/ggml/tests/: test-backend-ops.cpp
engine/scripts/: benchmark_0p6b_f16_cuda.ps1  benchmark_cuda_graphs.ps1  benchmark_python_vs_cpp.ps1  benchmark_pytorch_vs_cpp.py  compare_e2e.py  debug_speaker_encoder.py  debug_trace_report.py  prepare_reference_audio.ps1  prepare_test_assets.ps1  run_all_tests.ps1  run_all_tests.sh  setup_pipeline_models.py  verify_encoder.py  verify_tokenizer.py
engine/src/: audio_tokenizer_decoder.h  audio_tokenizer_encoder.cpp  audio_tokenizer_encoder.h  main.cpp  qwen3_tts.cpp  qwen3_tts.def  qwen3_tts.h  qwen3_tts_c.cpp  qwen3_tts_quantize.cpp  text_tokenizer.cpp  text_tokenizer.h  tokenizer_unicode.cpp  tokenizer_unicode_data.cpp  tts_transformer.h
engine/src/decoder/: decoder_cache.cpp  decoder_graph.cpp  decoder_layers.cpp  decoder_runtime.cpp  decoder_state_internal.h
engine/src/encoder/: encoder_frontend.cpp  encoder_graph.cpp  encoder_loader.cpp  encoder_state_internal.h
engine/src/pipeline/: pipeline_models.cpp  pipeline_runtime.cpp  (+1 more)
engine/tests/: test_encoder.cpp  test_vq_only.cpp
include/offgrid_tts/: Qwen3StreamingTts.h
reference/: lana_0.6b_f16.json  lana_1.7b_f16.json  lana_ref.segments.json  ref_speaker.json
scripts/: benchmark_0p6b_f16_cuda.ps1  compare_e2e.py  generate_deterministic_reference.py  prepare_reference_audio.ps1  prepare_test_assets.ps1  requirements-test-assets.txt
src/audio/: WavWriter.cpp  WavWriter.h
src/cli/: main.cpp
src/streaming/: Qwen3StreamingTts.cpp
tools/: ab_detector_report.json  benchmark_pytorch_vs_cpp.py  build.bat  buildcuda.bat  compare_e2e.py  convert_code_predictor_to_coreml.py  convert_tokenizer_to_gguf.py  convert_tts_to_gguf.py  debug_decoder.py  debug_trace_report.py  detect_synthetic_spans.py  generate_deterministic_reference.py  generate_reference_outputs.py  lana_detector_report.json  setup_1.7b_model.py  setup_pipeline_models.py  speaker_embedding_smoke_test.py  streaming_callback_benchmark.py  streaming_quality_ab.py  test_base.bat  test_linecoach_base.bat  test_stream.bat  test_voicedesign.bat  verify_encoder.py  verify_tokenizer.py  voicedesign_to_wav.py  wav_to_speaker_embedding.py
tools/stream_quality_runs/: ffc_baseline.json
tools/voice_quality_runs/: current_report.json  detector_report.json  hf_bestof_temp02.segments.json  hf_bestof_temp035.segments.json  hf_bestof_temp035_plus.segments.json  hf_gapfade.segments.json  hf_joined_batch.segments.json  hf_nogap.segments.json  hf_sent_temp02.segments.json  hf_test.segments.json
(+88 files in other folders)
